# faster

./: .clang-format  .clangd  LICENSE  meson.build
include/: faster_config.h
include/aster/: faster.h  faster_aq.h  faster_ast.h  faster_avl.h  faster_core.h  faster_ht.h  faster_is.h  faster_str.h
src/: aq.c  ast.c  avl.c  core.c  ht.c  is.c  main.c  meson.build  str.c
test/: aq-unit.c  avl-unit-1.c  avl-unit-2.c  avl-unit-3.c  basic-unit.c  ht-unit.c  is-unit.c  mb-unit.c  meson.build
